<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Activity Activities Sample -->
    <string name="activity_activities_label">Activities</string>

    <!-- Activity Colors Sample -->
    <string name="activity_colors_accessory">accessory</string>
    <string name="activity_colors_alert">alert</string>
    <string name="activity_colors_black">black</string>
    <string name="activity_colors_call_to_action">call to action</string>
    <string name="activity_colors_darker_gray">darker gray</string>
    <string name="activity_colors_darkest_gray">darkest gray</string>
    <string name="activity_colors_gray">gray</string>
    <string name="activity_colors_label">Colors</string>
    <string name="activity_colors_lighter_gray">lighter gray</string>
    <string name="activity_colors_lightest_gray">lightest gray</string>
    <string name="activity_colors_neutral">neutral</string>
    <string name="activity_colors_primary">primary</string>
    <string name="activity_colors_secondary">secondary</string>
    <string name="activity_colors_success">success</string>
    <string name="activity_colors_title_black_and_white">1.3 Black and white</string>
    <string name="activity_colors_title_gray_scale">1.2 Gray scale</string>
    <string name="activity_colors_title_pallet">1.1 Colors</string>
    <string name="activity_colors_white">white</string>

    <!-- Activity Controls Sample -->
    <string name="activity_controls_alert_button">Alert</string>
    <string name="activity_controls_callToAction_button">Call to Action</string>
    <string name="activity_controls_label">Controls</string>
    <string name="activity_controls_link_button">Link</string>
    <string name="activity_controls_neutral_button">Neutral</string>
    <string name="activity_controls_primary_button">Primary</string>
    <string name="activity_controls_secondary_button">Secondary</string>
    <string name="activity_controls_title_button">3.1 Buttons</string>
    <string name="activity_controls_title_disabled_button">3.2 Disabled Buttons</string>

    <!-- Activity Main Sample -->
    <string-array name="activity_main_sample_items">
        <item>1. Colors</item>
        <item>2. Typography</item>
        <item>3. Controls</item>
        <item>4. Activities</item>
    </string-array>

    <string-array name="gender_array">
        <item>Sexo*</item>
        <item>Masculino</item>
        <item>Feminino</item>
    </string-array>

    <!-- Activity Typography Sample -->
    <string name="activity_typography_body_example">Body - This is a body</string>
    <string name="activity_typography_caption_example">Caption - This is a caption</string>
    <string name="activity_typography_error_caption_example">Caption - This is an error caption</string>
    <string name="activity_typography_h1_heading">H1 - Heading 1</string>
    <string name="activity_typography_h2_heading">H2 - Heading 2</string>
    <string name="activity_typography_h3_heading">H3 - Heading 3</string>
    <string name="activity_typography_h4_heading">H4 - Heading 4</string>
    <string name="activity_typography_input_placeholder_example">This is an input placeholder</string>
    <string name="activity_typography_input_value_example">This is an input value</string>
    <string name="activity_typography_label">Typography</string>
    <string name="activity_typography_label_example">This is a label</string>
    <string name="activity_typography_primary_fonts">Primary font</string>
    <string name="activity_typography_secondary_fonts">Secondary font</string>
    <string name="activity_typography_size_l">Large (L)</string>
    <string name="activity_typography_size_m">Medium (M)</string>
    <string name="activity_typography_size_s">Small (S)</string>
    <string name="activity_typography_size_xl">Extra Large (XL)</string>
    <string name="activity_typography_size_xs">Extra Small (XS)</string>
    <string name="activity_typography_title_body">2.5 Body</string>
    <string name="activity_typography_title_caption">2.4 Caption</string>
    <string name="activity_typography_title_font_family">2.1.1 Font family</string>
    <string name="activity_typography_title_general_rule">2.1 General Rules</string>
    <string name="activity_typography_title_input_values">2.2.2 Input values</string>
    <string name="activity_typography_title_labels">2.2.1 Labels</string>
    <string name="activity_typography_title_sizes">2.1.2 Sizes</string>
    <string name="activity_typography_title_textual_in_forms">2.2 Textual elements in forms</string>
    <string name="activity_typography_title_titles">2.3 Titles</string>
    <string name="title_activity_log_in">LogIn</string>
    <string name="title_activity_energia_livre">EnergiaLivre</string>
    <string name="title_activity_menu_energia_livre">MenuEnergiaLivreActivity</string>
    <string name="title_activity_tutorial">TutorialActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_criar_conta">CriarContaActivity</string>
    <string name="title_activity_drawer_test">DrawerTestActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_custom_drawer">CustomDrawerActivity</string>
    <string name="title_activity_page_view_tutorial">PageViewTutorialActivity</string>

</resources>
